--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,11 @@
   <body>
     <form class="form-search">
       <input type="text" name="input" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <button type="submit" class="btn-submit">Search</button>
     </form>
-    <span class="loader"></span>
+    <span class="loader visually-hidden"></span>
     <ul class="gallary"></ul>
+    <button type="button" class="btn-load-more visually-hidden">Load more</button>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
